--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2080,7 +2080,7 @@ header {
   z-index: 2;
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
           box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); }
-  @media (min-width: 100rem) {
+  @media (min-width: 45rem) {
     header {
       -webkit-box-shadow: none;
               box-shadow: none; } }
@@ -2184,6 +2184,20 @@ header {
     font-size: .8rem;
     padding: .5rem 0 0 .5rem; }
 
+.Header-searchDesktop, .Header-logoTop {
+  display: none; }
+  @media (min-width: 45rem) {
+    .Header-searchDesktop, .Header-logoTop {
+      display: block; } }
+
+.Header-navTop {
+  display: none; }
+  @media (min-width: 45rem) {
+    .Header-navTop {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+
 .Header-search {
   padding: 3rem 0 2rem; }
   .Header-search form {
@@ -2219,7 +2233,7 @@ header {
 .Nav {
   overflow-y: auto;
   height: inherit; }
-  @media (min-width: 100rem) {
+  @media (min-width: 45rem) {
     .Nav {
       overflow-y: inherit;
       height: auto; } }
@@ -2235,7 +2249,7 @@ header {
         -ms-flex-direction: column;
             flex-direction: column;
     padding: 1rem 2rem; }
-    @media (min-width: 100rem) {
+    @media (min-width: 45rem) {
       .Nav ul {
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
@@ -2247,13 +2261,13 @@ header {
         display: none; }
       .Nav ul li:nth-child(2) {
         border-top: none; }
-      @media (min-width: 100rem) {
+      @media (min-width: 45rem) {
         .Nav ul li {
           border-top: none; }
           .Nav ul li:first-child {
             display: block; } }
-      @media (min-width: 100rem) {
-        .Nav ul li.hide-large {
+      @media (min-width: 45rem) {
+        .Nav ul li.hide-medium {
           display: none; } }
   .Nav a {
     display: block;
@@ -2264,7 +2278,7 @@ header {
     letter-spacing: 2px;
     color: #757575;
     font-weight: 600; }
-    @media (min-width: 100rem) {
+    @media (min-width: 45rem) {
       .Nav a {
         border-top: none;
         font-size: 1.05rem;
@@ -2312,7 +2326,7 @@ header {
   .Nav-content.open {
     -webkit-transform: translateX(100%);
             transform: translateX(100%); }
-  @media (min-width: 100rem) {
+  @media (min-width: 45rem) {
     .Nav-content {
       position: -webkit-sticky;
       position: sticky;
@@ -2360,7 +2374,7 @@ header {
   cursor: pointer;
   background: rgba(255, 255, 255, 0.4);
   border-radius: .5rem; }
-  @media (min-width: 100rem) {
+  @media (min-width: 45rem) {
     #menu-toggle {
       display: none; } }
   #menu-toggle span {
@@ -2442,7 +2456,7 @@ header {
 
 body.open-nav {
   overflow-y: hidden; }
-  @media (min-width: 100rem) {
+  @media (min-width: 45rem) {
     body.open-nav {
       overflow-y: visible; } }
 
@@ -2470,15 +2484,15 @@ body.open-nav {
   background: #FFEEF8;
   color: #e6007e;
   padding: 3rem 0 0; }
-  @media (min-width: 100rem) {
+  @media (min-width: 1000px) {
     .Map {
       padding: 3rem 0; } }
   .Map article:first-child {
     padding: 0 2.5rem 2rem; }
-    @media (min-width: 100rem) {
+    @media (min-width: 1000px) {
       .Map article:first-child {
         padding: 0 0 0 3rem; } }
-  @media (min-width: 100rem) {
+  @media (min-width: 1000px) {
     .Map article:last-child {
       padding-left: 3rem; } }
   .Map h1 {
@@ -2714,7 +2728,7 @@ body.open-nav {
   padding: 2rem 0; }
   .Footer-pay article:last-child {
     margin: auto; }
-    @media (min-width: 100rem) {
+    @media (min-width: 45rem) {
       .Footer-pay article:last-child {
         margin: 0; } }
   .Footer-pay li {
@@ -2735,7 +2749,7 @@ body.open-nav {
   width: 2.5rem;
   padding: .2rem .6rem; }
 
-@media (min-width: 100rem) {
+@media (min-width: 45rem) {
   .Newsletter {
     border-left: .1rem solid white;
     border-right: .1rem solid white; } }
@@ -2745,7 +2759,7 @@ body.open-nav {
   border-top: .1rem solid white;
   padding: 6rem 0 6.5rem;
   margin: 2rem 0 0; }
-  @media (min-width: 100rem) {
+  @media (min-width: 45rem) {
     .Footer-shop {
       border-bottom: none;
       border-top: none;
@@ -2757,7 +2771,7 @@ body.open-nav {
       -ms-flex-order: 1;
           order: 1;
   padding: 1.6rem 0 .4rem; }
-  @media (min-width: 100rem) {
+  @media (min-width: 45rem) {
     .Footer-links {
       -webkit-box-ordinal-group: 1;
           -ms-flex-order: 0;
