--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,7 +20,7 @@
       @content
     }
   } @else if $breakpoint == "large" {
-    @media (min-width: 100rem) {
+    @media (min-width: 1000px) {
       @content
     }
   }
