--- a/src/scss/template/footer.scss
+++ b/src/scss/template/footer.scss
@@ -103,7 +103,7 @@
 .Footer-pay {
   article:last-child{
     margin: auto;
-    @include respond-to(large) {
+    @include respond-to(medium) {
       margin: 0;
     }
 
@@ -136,7 +136,7 @@
 }
 
 .Newsletter {
-  @include respond-to(large) {
+  @include respond-to(medium) {
     border-left: .1rem solid white;
     border-right: .1rem solid white;
   }
@@ -147,7 +147,7 @@
   border-top: .1rem solid white;
   padding: 6rem 0 6.5rem;
   margin: 2rem 0 0;
-  @include respond-to(large) {
+  @include respond-to(medium) {
     border-bottom: none;
     border-top: none;
     padding: 0;
@@ -158,7 +158,7 @@
 .Footer-links {
   order: 1;
   padding: 1.6rem 0 .4rem;
-  @include respond-to(large) {
+  @include respond-to(medium) {
     order: 0;
     padding: 0;
   }
