--- a/src/scss/template/index.scss
+++ b/src/scss/template/index.scss
@@ -100,6 +100,7 @@
     line-height: 1.3rem;
     padding: 1.5rem 0;
     font-weight: 600;
+    max-width: calc(100% - 40px);
   }
   .icon {
     font-size: 2rem;
