--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,5 @@
 @import "~inuit-css";
+
 :root {
   --primary-color: #82f451;
   --secondary-color: #5A6169;
@@ -10,6 +11,7 @@
   --active-color: #007BFF;
   --grid-maxWidth: 1400px;
 }
+
 @mixin respond-to($breakpoint) {
   @if $breakpoint == "small" {
     @media (min-width: 36rem) {
@@ -20,16 +22,103 @@
       @content
     }
   } @else if $breakpoint == "large" {
-    @media (min-width: 1000px) {
+    @media (min-width: 920px) {
       @content
     }
   }
 }
-body{
+
+body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   letter-spacing: .2rem;
 }
+
 @import "template/header";
 @import "template/index";
 @import "template/footer";
+
+.products {
+  width: 100%;
+  margin-bottom: 6rem;
+  padding-left: 0;
+
+  @include respond-to(large){
+    padding-left: 2%;
+    width: 80%;
+  }
+  article {
+    padding: 1.5rem;
+    max-width: 30rem;
+    margin: auto;
+  }
+  img {
+    max-width: 30rem;
+    width: 100%;
+  }
+}
+
+.filters {
+  width: 100%;
+
+  @include respond-to(large){
+    width: 20%;
+  }
+  > ul{
+    max-width: 100%;
+    @include respond-to(large){
+      max-width: 27.4rem;
+    }
+  }
+  margin-top: 1.6rem;
+  h3 {
+    background-color: #e6007e;
+    border-top: solid 1px #fff;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    padding: 16px 20px;
+    position: relative;
+    font-weight: 800;
+    margin: 0;
+    letter-spacing: 0;
+
+    &:after {
+      background-color: #c7046f;
+      border-radius: 20px;
+      border-bottom: solid 1px #3a172c;
+      content: url(../images/arrow.png);
+      color: #fff;
+      height: 15px;
+      padding-top: 5px;
+      position: absolute;
+      text-align: center;
+      right: 20px;
+      top: 12px;
+      width: 20px;
+      line-height: 1rem;
+    }
+  }
+}
+
+.category-product {
+  background: #f7f7f7;
+  max-height: 0;
+  overflow: hidden;
+  transition: all .5s ease-in;
+  li {
+    border-top: solid 1px #dddbdb;
+    padding: 15px 0;
+    color: #757575;
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+  &.show {
+    max-height: 50rem;
+  }
+}
+
+.category-product li:nth-child(1) {
+  border-top: none
+}
