--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,88 +37,120 @@ body {
 @import "template/header";
 @import "template/index";
 @import "template/footer";
+@import "template/products";
 
-.products {
+
+.img-magnifier-glass {
+  position: absolute;
+  border: 3px solid #ddd;
+  opacity: 0;
+  cursor: none;
+  width: 200px;
+  height: 200px;
+  &:hover{
+    opacity: 1;
+  }
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top:0;
+  z-index: 100;
+  background-color: rgba(0,0,0,0.65);
+  &.show{
+    display: flex;
+  }
+}
+.modal-main{
+  position: relative;
+  background: white;
+  color: #444;
+  padding: 2.4rem;
+  max-width: 92rem;
   width: 100%;
-  margin-bottom: 6rem;
-  padding-left: 0;
-
+  margin: 0 2rem;
+  overflow: scroll;
+  max-height: 90%;
   @include respond-to(large){
-    padding-left: 2%;
+    margin: 0;
+  }
+}
+.modal-close{
+  position: absolute;
+  top: 1.2rem;
+  right: 1.2rem ;
+  width: 1.8rem;
+  height: 1.8rem;
+  cursor: pointer;
+  background: url("../images/closeModal.png") no-repeat center center;
+}
+.modal-slide{
+  max-width: 100%;
+  margin: auto;
+  @include respond-to(large){
+    max-width: 51rem;
+  }
+}
+
+.modal-info{
+  padding-left: 2rem;
+  box-sizing: border-box;
+  color: #757575;
+  max-width: 100%;
+  @include respond-to(large){
+    max-width: 36rem;
+  }
+  h2{
+    font-size: 2.7rem;
+    letter-spacing: 0.2rem;
+    line-height: 3.4rem;
+    margin-bottom: 2.4rem;
     width: 80%;
+    font-weight: 500;
+    color: #757575;
   }
-  article {
-    padding: 1.5rem;
-    max-width: 30rem;
-    margin: auto;
+  h3{
+    font-weight: 600;
+    font-size: 2rem;
+    letter-spacing: 0;
+    margin-top: 2.4rem;
   }
-  img {
-    max-width: 30rem;
+  p{
+    font-weight: 100;
+    &.ref{
+      font-size: 1.2rem;
+    }
+  }
+}
+.modal-images{
+  max-width: 10rem;
+  margin-right: 2rem;
+  ul{
+    display: flex;
+    flex-direction: row;
+    @include respond-to(medium){
+      flex-direction: column;
+    }
+  }
+  li{
+    margin-bottom: .5rem;
+    cursor: pointer;
+  }
+}
+.modal-image{
+  width: 38rem;
+  margin-right: 10px;
+  li{
     width: 100%;
   }
-}
-
-.filters {
-  width: 100%;
-
-  @include respond-to(large){
-    width: 20%;
+  img{
+    min-width: 38rem;
   }
-  > ul{
-    max-width: 100%;
-    @include respond-to(large){
-      max-width: 27.4rem;
-    }
-  }
-  margin-top: 1.6rem;
-  h3 {
-    background-color: #e6007e;
-    border-top: solid 1px #fff;
-    color: #fff;
-    cursor: pointer;
-    font-size: 1.1rem;
-    text-transform: uppercase;
-    padding: 16px 20px;
-    position: relative;
-    font-weight: 800;
-    margin: 0;
-    letter-spacing: 0;
-
-    &:after {
-      background-color: #c7046f;
-      border-radius: 20px;
-      border-bottom: solid 1px #3a172c;
-      content: url(../images/arrow.png);
-      color: #fff;
-      height: 15px;
-      padding-top: 5px;
-      position: absolute;
-      text-align: center;
-      right: 20px;
-      top: 12px;
-      width: 20px;
-      line-height: 1rem;
-    }
+  .flickity-page-dots,.flickity-prev-next-button{
+    display: none;
   }
 }
 
-.category-product {
-  background: #f7f7f7;
-  max-height: 0;
-  overflow: hidden;
-  transition: all .5s ease-in;
-  li {
-    border-top: solid 1px #dddbdb;
-    padding: 15px 0;
-    color: #757575;
-    font-size: 1.2rem;
-    font-weight: 500;
-  }
-  &.show {
-    max-height: 50rem;
-  }
-}
-
-.category-product li:nth-child(1) {
-  border-top: none
-}
