--- a/src/scss/template/index.scss
+++ b/src/scss/template/index.scss
@@ -23,8 +23,8 @@
 }
 
 .Map {
-  background: #FFEEF8;
-  color: #e6007e;
+  background: #e6007e;
+  color: #FFF;
   padding: 3rem 0 0;
   @include respond-to(large) {
     padding: 3rem 0 ;
@@ -105,7 +105,6 @@
   .icon {
     font-size: 2rem;
     background-color: #f7f7f7;
-    border: none;
     border-top: 1px solid #dddbdb;
     border-radius: 20px;
     cursor: pointer;
@@ -115,7 +114,6 @@
     width: 40px;
     position: relative;
     padding: .5rem 1rem;
-    display: none;
     @include respond-to(medium) {
       display: block;
     }
@@ -128,9 +126,12 @@
     color: #757575;
   }
   article {
-    width: 50%;
+    width: 100%;
     padding: 0 3rem;
     @include respond-to(medium) {
+      width: 50%;
+    }
+    @include respond-to(large) {
       width: 25%;
     }
   }
