--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2660,8 +2660,11 @@ a.fucsia {
   background: #e6007e;
   color: white;
   text-transform: uppercase;
-  padding: 3rem 0 2rem;
+  padding: 3rem 2rem 2rem;
   width: 100%; }
+  .Footer-content .container-less {
+    max-width: 100rem;
+    margin: auto; }
   .Footer-content a {
     color: white;
     font-size: 1.1rem;
@@ -2677,7 +2680,7 @@ a.fucsia {
     line-height: 1.4rem; }
   .Footer-content form {
     position: relative;
-    width: 35rem;
+    width: 40rem;
     max-width: 100%;
     margin: auto; }
     .Footer-content form p {
@@ -2768,8 +2771,7 @@ a.fucsia {
 
 @media (min-width: 920px) {
   .Newsletter {
-    border-left: .1rem solid white;
-    border-right: .1rem solid white; } }
+    border-left: .1rem solid white; } }
 
 .Footer-shop {
   border-bottom: .1rem solid white;
