--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -33,7 +33,12 @@ body {
   font-weight: 600;
   letter-spacing: .2rem;
 }
-
+h2{
+  font-weight: 100;
+}
+p{
+  font-weight: 100;
+}
 @import "template/header";
 @import "template/index";
 @import "template/footer";
