--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2501,21 +2501,39 @@ a.fucsia {
     .main-carousel .flickity-prev-next-button {
       display: block; } }
 
-.Map {
+.Map-formContainer {
   background: #e6007e;
-  color: #FFF;
-  padding: 3rem 0 0; }
+  max-height: 46rem;
+  margin-bottom: 2rem;
+  padding: 3rem 1rem 3rem;
+  border-radius: 1.2rem; }
+  @media (min-width: 45rem) {
+    .Map-formContainer {
+      padding: 8rem 3rem 10rem;
+      margin-bottom: 0; } }
+
+@media (min-width: 920px) {
+  .Map-articleContainer {
+    padding-left: 3rem; } }
+
+.Map {
+  text-transform: uppercase;
+  color: #FFF; }
   @media (min-width: 920px) {
     .Map {
       padding: 3rem 0; } }
-  .Map article:first-child {
-    padding: 0 2.5rem 2rem; }
-    @media (min-width: 920px) {
-      .Map article:first-child {
-        padding: 0 0 0 3rem; } }
-  @media (min-width: 920px) {
-    .Map article:last-child {
-      padding-left: 3rem; } }
+  .Map h3 {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    line-height: 2rem;
+    text-transform: uppercase;
+    margin: 0 auto 4rem auto;
+    color: #757575; }
+    @media (min-width: 45rem) {
+      .Map h3 {
+        line-height: 1.5rem; } }
   .Map h1 {
     border-bottom: .1rem solid #e6007e;
     font-weight: 600;
@@ -2533,7 +2551,7 @@ a.fucsia {
 
 .Map-google {
   width: 100%;
-  height: 60rem; }
+  height: 46rem; }
 
 #Map-location {
   margin: 2rem auto !important;
@@ -2555,7 +2573,7 @@ a.fucsia {
     font-size: 2rem;
     font-weight: 500;
     letter-spacing: 2px;
-    line-height: 2  rem;
+    line-height: 2rem;
     text-transform: uppercase;
     margin: 0 auto 4rem auto;
     color: #757575; }
@@ -2616,15 +2634,6 @@ a.fucsia {
 .Social-feeds {
   overflow: hidden;
   margin-bottom: 4rem; }
-  .Social-feeds article {
-    width: 50%;
-    padding: 0 1rem; }
-    @media (min-width: 45rem) {
-      .Social-feeds article {
-        width: 50%; } }
-    @media (min-width: 920px) {
-      .Social-feeds article {
-        width: 25%; } }
   .Social-feeds button {
     min-width: auto;
     min-height: auto; }
@@ -2665,35 +2674,6 @@ a.fucsia {
             transform: translate(50%, -50%);
     right: .5rem !important; }
 
-#FeedId {
-  width: 100%;
-  vertical-align: top;
-  margin: 2rem auto; }
-  @media (min-width: 45rem) {
-    #FeedId {
-      width: calc(100% - 22rem);
-      display: inline-block;
-      margin: 0 auto;
-      overflow: hidden; } }
-  @media (min-width: 45rem) {
-    #FeedId {
-      width: calc(100% - 37rem); } }
-
-.fb-page {
-  padding: 2rem;
-  width: 100%;
-  display: block;
-  vertical-align: top; }
-  @media (min-width: 45rem) {
-    .fb-page {
-      width: 20rem;
-      display: inline-block;
-      padding: 0 0 0 2rem;
-      margin: 0 auto; } }
-  @media (min-width: 45rem) {
-    .fb-page {
-      width: 35rem; } }
-
 .about-content {
   background-position: center center;
   background-repeat: none;
@@ -2702,6 +2682,91 @@ a.fucsia {
   min-height: 80vh;
   overflow-x: hidden;
   overflow-y: visible; }
+
+.Social-feedsContent {
+  max-width: 320px;
+  margin: auto; }
+
+#FeedId {
+  max-width: 300px;
+  max-height: 560px;
+  overflow: scroll;
+  margin: auto; }
+
+.feedImage {
+  width: 300px;
+  background-size: cover;
+  background-position: center center;
+  margin-bottom: 2rem;
+  height: 300px; }
+
+.fb-page {
+  max-width: 300px;
+  width: 300px;
+  max-height: 400px;
+  margin: 4rem auto 0;
+  overflow: hidden; }
+
+@media (min-width: 600px) {
+  #FeedId article:nth-child(n) .feedImage {
+    margin-right: 1rem; }
+  #FeedId article:nth-child(2n) .feedImage {
+    margin-left: 1rem; }
+  .Social-feedsContent {
+    max-width: 60rem; }
+  #FeedId {
+    max-width: 400px;
+    max-height: 360px;
+    overflow: scroll; }
+  .feedImage {
+    height: 170px;
+    width: 170px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 2rem; }
+  .fb-page {
+    max-width: 200px;
+    width: 200px;
+    max-height: 360px;
+    border-left: 2px solid #cbcbcb;
+    padding-left: 2rem;
+    margin: 0; } }
+
+@media (min-width: 900px) {
+  .Social-feedsContent {
+    max-width: 90rem; }
+  #FeedId {
+    max-width: 600px;
+    max-height: 560px;
+    overflow: scroll; }
+  .feedImage {
+    height: 270px;
+    width: 270px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 2rem; }
+  .fb-page {
+    max-width: 290px;
+    width: 270px;
+    max-height: 560px; } }
+
+@media (min-width: 1140px) {
+  .Social-feedsContent {
+    max-width: 114rem; }
+  #FeedId {
+    max-width: 780px;
+    max-height: 760px;
+    overflow: scroll; }
+  .feedImage {
+    height: 370px;
+    width: 370px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 2rem; }
+  .fb-page {
+    max-width: 390px;
+    width: 350px;
+    max-height: 760px; } }
 
 .Footer-content {
   background: #e6007e;
