--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2766,7 +2766,13 @@ a.fucsia {
   .fb-page {
     max-width: 390px;
     width: 350px;
-    max-height: 760px; } }
+    max-height: 760px; }
+  .Social-feedsTitle h3:first-child {
+    text-align: center;
+    max-width: 370px; }
+  .Social-feedsTitle h3:first-child {
+    text-align: center;
+    max-width: 390px; } }
 
 .Footer-content {
   background: #e6007e;
