--- a/src/scss/template/index.scss
+++ b/src/scss/template/index.scss
@@ -352,4 +352,14 @@
     width: 350px;
     max-height: 760px;
   }
+  .Social-feedsTitle{
+    h3:first-child{
+      text-align: center;
+      max-width: 370px;
+    }
+    h3:first-child{
+      text-align: center;
+      max-width: 390px;
+    }
+  }
 }
