--- a/src/scss/template/index.scss
+++ b/src/scss/template/index.scss
@@ -59,6 +59,10 @@
       line-height: 1.5rem;
     }
   }
+  h4{
+    font-weight: bold;
+    margin-bottom: 3.9rem;
+  }
   h1 {
     border-bottom: .1rem solid #e6007e;
     font-weight: 600;
@@ -99,6 +103,7 @@
   max-width: 125rem;
   margin: 5rem auto;
   position: relative;
+  text-align: center;
   h3 {
     text-align: center;
     font-size: 2rem;
@@ -113,36 +118,36 @@
     }
   }
   h2 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: 2px;
     line-height: 1.3rem;
-    padding: 1.5rem 0;
+    padding: 1.5rem 0 0;
     font-weight: 600;
     max-width: calc(100% - 40px);
+    margin: auto;
   }
   .icon {
-    font-size: 2rem;
-    background-color: #f7f7f7;
-    border-top: 1px solid #dddbdb;
-    border-radius: 20px;
-    cursor: pointer;
-    height: 40px;
+
+    position: absolute;
     right: 0;
-    top: 15px;
-    width: 40px;
-    position: relative;
-    padding: .5rem 1rem;
+    bottom: 0;
+    background: rgba(255, 255, 255, .2);
+    border-radius: 1.6rem 0 0 1.6rem;
+    padding: .6rem 3rem .6rem  1rem ;
+    font-size: 1.2rem;
+    color: #6f6f6f;
     @include respond-to(medium) {
       display: block;
+
     }
   }
   span {
-    font-size: 1.2rem;
-    color: #757575;
+    font-size: 1.6rem;
+    color: #e6007e;
   }
   a {
-    color: #757575;
+    color: black;
   }
   article {
     width: 100%;
@@ -170,6 +175,10 @@
   }
 }
 
+.Slide-productsImage {
+  position: relative;
+
+}
 
 .Slide-productsContent {
   margin-bottom: 6rem;
@@ -238,7 +247,6 @@
   overflow-y: visible;
 }
 
-
 .Social-feedsContent {
   max-width: 320px;
   margin: auto;
@@ -259,7 +267,6 @@
   height: 300px;
 }
 
-
 .fb-page {
   max-width: 300px;
   width: 300px;
@@ -270,7 +277,7 @@
 
 @media (min-width: 600px) {
   #FeedId article:nth-child(n) .feedImage {
-    margin-right: 1rem;
+    margin-right: 4rem;
   }
 
   #FeedId article:nth-child(2n) .feedImage {
@@ -285,6 +292,10 @@
     max-width: 400px;
     max-height: 360px;
     overflow: scroll;
+  }
+  .FeedId-h3 {
+    width: 400px;
+    text-align: center;
   }
   .feedImage {
     height: 170px;
@@ -303,6 +314,11 @@
     padding-left: 2rem;
     margin: 0;
   }
+  .fb-page-h3 {
+    max-width: 200px;
+    width: 200px;
+   text-align: center;
+  }
 }
 
 @media (min-width: 900px) {
@@ -315,9 +331,12 @@
     max-height: 560px;
     overflow: scroll;
   }
+  .FeedId-h3 {
+    width: 600px;
+  }
   .feedImage {
-    height: 270px;
-    width: 270px;
+    height: 210px;
+    width: 210px;
     background-size: cover;
     background-position: center center;
     margin-bottom: 2rem;
@@ -329,7 +348,12 @@
     width: 270px;
     max-height: 560px;
   }
+  .fb-page-h3 {
+    max-width: 290px;
+    width: 270px;
+  }
 }
+
 @media (min-width: 1140px) {
   .Social-feedsContent {
     max-width: 114rem;
@@ -339,9 +363,12 @@
     max-height: 760px;
     overflow: scroll;
   }
+  .FeedId-h3 {
+    width: 780px;
+  }
   .feedImage {
-    height: 370px;
-    width: 370px;
+    height: 340px;
+    width: 340px;
     background-size: cover;
     background-position: center center;
     margin-bottom: 2rem;
@@ -352,14 +379,28 @@
     width: 350px;
     max-height: 760px;
   }
-  .Social-feedsTitle{
-    h3:first-child{
-      text-align: center;
-      max-width: 370px;
-    }
-    h3:first-child{
-      text-align: center;
-      max-width: 390px;
-    }
+  .fb-page-h3 {
+    max-width: 390px;
+    width: 350px;
   }
+  .Social-feedsTitle {
+    max-width: 114rem;
+    margin: auto;
+  }
+}
+
+.banner-2 article {
+  text-align: center;
+}
+.Social-feeds h2{
+  text-align: center;
+  padding: 1rem .5rem .8rem;
+  color: white;
+  background: #f0c3d8;
+  margin: 2rem auto ;
+  width: 90%;
+  max-width: 57rem;
+  font-size: 1.8rem;
+  border-radius: 1rem;
+
 }
