--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2750,7 +2750,10 @@ a.fucsia {
   #FeedId {
     max-width: 600px;
     max-height: 560px;
-    overflow: scroll; }
+    overflow-y: scroll; }
+    #FeedId::-webkit-scrollbar {
+      display: none;
+      -ms-overflow-style: none; }
   .FeedId-h3 {
     width: 600px; }
   .feedImage {
