--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3023,6 +3023,10 @@ a.fucsia {
 .category-product li:nth-child(1) {
   border-top: none; }
 
+.delete_product button {
+  margin-top: 1rem;
+  background: #e6007e !important; }
+
 .img-magnifier-glass {
   position: absolute;
   border: 3px solid #ddd;
