--- a/src/scss/template/products.scss
+++ b/src/scss/template/products.scss
@@ -83,3 +83,9 @@
 .category-product li:nth-child(1) {
   border-top: none
 }
+.delete_product{
+  button{
+    margin-top: 1rem ;
+    background: #e6007e !important;
+  }
+}
