--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3195,4 +3195,9 @@ a.fucsia {
     left: -10px;
     letter-spacing: 0; }
 
+#piereg_login_form, #pie_regiser_form {
+  max-width: 90% !important;
+  width: 60rem !important;
+  margin: auto !important; }
+
 /*# sourceMappingURL=main.css.map*/
