--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -50,4 +50,8 @@ p{
   width: 60rem !important;
   margin: auto !important;
 
+  .forgetmenot,.submit,#nav{
+    text-align: right;
+    padding-right: 70px;
+  }
 }
