--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2572,6 +2572,12 @@ a.fucsia {
   margin: 5rem auto;
   position: relative;
   text-align: center; }
+  .Slide-products i {
+    display: block;
+    text-align: center;
+    margin: .4rem 0;
+    font-size: 1.3rem;
+    color: #999; }
   .Slide-products h3 {
     text-align: center;
     font-size: 2rem;
