--- a/src/scss/template/index.scss
+++ b/src/scss/template/index.scss
@@ -105,6 +105,13 @@
   margin: 5rem auto;
   position: relative;
   text-align: center;
+  i{
+    display: block;
+    text-align: center;
+    margin: .4rem 0;
+    font-size: 1.3rem;
+    color: #999;
+  }
   h3 {
     text-align: center;
     font-size: 2rem;
