--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3209,4 +3209,7 @@ a.fucsia {
     text-align: right;
     padding-right: 70px; }
 
+.shop {
+  color: #e6007e; }
+
 /*# sourceMappingURL=main.css.map*/
