--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3210,6 +3210,6 @@ a.fucsia {
     padding-right: 70px; }
 
 .shop {
-  color: #e6007e; }
+  color: #e6007e !important; }
 
 /*# sourceMappingURL=main.css.map*/
